--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Gerador de Senha Colaborativo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link href="https://fabiocosta25.github.io/geradordesenha/styles.css" rel='stylesheet'/>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <link href="https://fabiocosta25.github.io/geradordesenha/styles.css" rel='stylesheet' />
     <script src="https://fabiocosta25.github.io/geradordesenha/script.js"></script>
 </head>
 <body>
