--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Gerador de Senha Colaborativo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <link href="https://fabiocosta25.github.io/geradordesenha/style.css" rel="stylesheet" />
-    <script src="https://fabiocosta25.github.io/geradordesenha/scripts.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src="https://fabiocosta25.github.io/geradordesenha/main.js"></script>
 </head>
 <body>
     <div class="container">
