--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src="https://fabiocosta25.github.io/geradordesenha/main.js"></script>
+    <script src="https://fabiocosta25.github.io/geradordesenha/main.css/main.js"></script>
 </head>
 <body>
     <div class="container">
