--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
        <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/0/09/Logotipo_da_Rede_Vanguarda.png/200px-Logotipo_da_Rede_Vanguarda.png">
-        <h2>Gerador de Senha Colaborativo</h2>
+        <h2>Gerador de Senha</h2>
         <div class="resultado-container">
           <span id="resultado"></span>
           <button class="btn" id="copiar">
