--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gerador de Senha</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-    <link href="https://fabiocosta25.github.io/geradordesenha/main.css" rel="stylesheet" /> 
+    <link href="https://github.com/fabiocosta25/geradordesenha/blob/main/main.css" rel="stylesheet" /> 
     <script src="https://github.com/fabiocosta25/geradordesenha/blob/main/main.js"></script>
 </head>
 <body>
